kustomize/environments/tst/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: min-js-webserver
spec:
  rules:
    - host: min-js-webserver-tst.27d42619d39741bab554.australiasoutheast.aksapp.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: min-js-webserver-service
                port:
                  number: 80
